# rubric

./: .gitignore  Cargo.toml  LICENSE  LICENSE.txt  README.md  go.work  index.md  package.json  pyproject.toml
_creed/: binarySearch.md  linearSearch.md
_gen/: init.ps1  init.sh
_init/: init.ps1  init.sh
c/: _lib.h  searchLinear.c
c++/: searchLinear.cpp
dart/: search_linear.dart
go/: go.mod  search_linear.go
julia/: search_linear.jl
kotlin/: SearchLinear.kt
nim/: search_linear.nim
python/: optimal_chain_order.py  search_binary.py  search_linear.py
rust/: optimal_chain_order.rs  search_linear.rs
src/: main.rs
typescript/: searchLinear.ts
v/: search_linear.v
zig/: search_linear.zig
